# olist-lakehouse-2.0

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .yamllint.yml  1. Data Generator.py  README.md  databricks.yml  manifest.mf  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy-staging.yml  pr-validation.yml
Pipeline Olist - CDC/bronze/: bronze_cdc_customers.sql  bronze_cdc_order_items.sql  bronze_cdc_order_payments.sql  bronze_cdc_orders.sql  customers.sql  geolocation.sql  order_payments.sql  orders copy.sql  products.sql  sellers.sql
Pipeline Olist - CDC/gold/: gmv_monthly_by_category.sql  orders_daily.sql
Pipeline Olist - CDC/silver/: order_reviews.sql  products.sql  silver_customer_auto_cdc.sql  silver_order_items_auto_cdc.sql  silver_order_payments_auto_cdc.sql  silver_orders_auto_cdc.sql
Pipeline Olist - CDC/stg/: stg_cdc_customers.sql  stg_cdc_order_items.sql  stg_cdc_order_payments.sql  stg_cdc_orders.sql
Pipeline Olist/bronze/: order_items.sql  order_reviews.sql
Pipeline Olist/gold/: gmv_daily_by_seller.sql  orders_daily_by_customer_state.sql  orders_monthly.sql
Pipeline Olist/silver/: customers.sql  geolocation.sql  order_items.sql  order_payments.sql  orders.sql  orders_enriched.sql  sellers.sql
docs/: ARCHITECTURE.md  CDC_GUIDE.md  CICD.md  DEPLOYMENT.md  ORCHESTRATION_GUIDE.md  PII_MASKING_GUIDE.md
resources/: olist_jobs.yml  olist_pipeline.yml
src/pipelines/bronze/: customers.sql  geolocation.sql  order_items.sql  order_payments.sql  order_reviews.sql  orders.sql  products.sql  sellers.sql
src/pipelines/cdc/: cdc_customers_bronze.sql  cdc_customers_silver.sql  cdc_products_bronze.sql  cdc_products_silver.sql  cdc_sellers_bronze.sql  cdc_sellers_silver.sql
src/pipelines/gold/: category_performance.sql  daily_orders.sql  monthly_orders.sql  orders_by_state.sql  seller_performance.sql
src/pipelines/silver/: customers.sql  geolocation.sql  order_items.sql  order_payments.sql  order_reviews.sql  orders.sql  orders_enriched.sql  products.sql  sellers.sql
src/setup/: apply_masks.sql  pii_masking.sql  unity_catalog_setup.py
src/utils/: data_generator.py
tests/: __init__.py  conftest.py
tests/sql/: __init__.py  test_sql_validation.py
tests/unit/: test_data_generator.py
